<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 istvank.eu

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">Lens Log</string>
    <string name="title_section_calendar">Calendar</string>
    <string name="title_section_lenses">Lenses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="pref_category_notification">Notifications</string>
    <string name="pref_notify">Daily Notification</string>
    <string name="pref_notify_summ">Do you want to be asked every day whether you are wearing your lenses?</string>
    <string name="pref_notification_time">Notification Time</string>
    <string name="pref_notification_time_summ">When do you want to be notified daily?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_question">Do you wear your lenses today?</string>
    <string name="action_new_lens">Add new lens</string>
    <string name="action_save">Save</string>
    <string name="title_fragment_newlens">Add new lens</string>
    <string name="menu_delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <!-- About -->
    <string name="about_body"><![CDATA[
        <b>Lens Log</b><br>
        Version %s
    ]]></string>
    <!-- Shown as a link in the About screen of the app.-->
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_accept_privacy_policy">I accept the Privacy Policy</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>

    <!-- A single button shown on informative popups, like EULA, open source licenses and About -->
    <string name="ok">OK</string>

    <string name="eula_legal_text"><![CDATA[
    Lens Log © 2014 by istvank.eu<br />

    The use of this app is regulated under the Privacy Policy available in the "About" menu.
    The user acknowledges that the software may not be free from defects and may not satisfy all of the user\'s needs.
    ]]></string>

    <string name="privacy_policy_text"><![CDATA[
    Lens Log is an app that enables its users to track their usage of contact lenses. Therefore, the app allows to enter and store personal medical data about the user\'s eye prescription. Besides, details about the used lens product and on which days they were used may be recorded in the app.
This is needed to fulfill the aims of the app, which is for the user to be able to get an overview about what lenses the user was using when.
The data is stored in a database on the local device; the app itself does not upload any data to any cloud services.
Lens Log does not sell, give or trade the statistics it stores to any 3rd party for data-mining or marketing purposes.
All data that is collected within Lens Log can be deleted by the user by removing the app from the device.
    ]]></string>

    <!-- EditLensFragment -->
    <string name="label_name">Name</string>
    <string name="label_brand">Brand</string>

    <string name="label_eye">Eye</string>
    <string-array name="eye_array">
        <item>Left</item>
        <item>Right</item>
        <item>Both</item>
    </string-array>

    <string name="label_default">Current package for this eye</string>

    <string name="label_content">Number of lenses</string>
    <string name="label_remaining">Sealed lenses</string>
    <string name="label_replacement_schedule">Replacement schedule</string>

    <string-array name="replacement_period_array">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="lens_type_array">
        <item>Myopia/Hypermetropia</item>
        <item>Astigmatism</item>
        <item>Multifocal/Presbyopia</item>
        <item>Decorative</item>
    </string-array>

    <string name="label_sphere">Sphere</string>
    <string name="label_base_curve">Base Curve</string>
    <string name="label_diameter">Diameter</string>
    <string name="label_cylinder">Cylinder</string>
    <string name="label_axis">Axis</string>
    <string name="label_add">Add Power</string>
    <string name="label_expiration">Expiration date</string>
    <string name="label_purchased">Purchase date</string>
    <string name="label_shop">Shop name</string>
    <string name="label_type">Lens type</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
