<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context="eu.istvank.apps.lenslog.fragments.EditLensFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_edt_name"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_brand" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_edt_brand"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_eye" />

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_spn_eye"
            android:layout_gravity="left" />

        <CheckBox
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_chk_default"
            android:text="@string/label_default" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/label_content" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/label_remaining" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/newlens_spn_content"
                android:layout_gravity="left"/>

            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/newlens_spn_remaining"
                android:layout_gravity="left" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_replacement_schedule" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left" >

            <Spinner
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/newlens_spn_replacement_value" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newlens_spn_replacement_period" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_purchased" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/newlens_edt_purchased"
            android:layout_gravity="left"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_expiration" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/newlens_edt_expiration"
            android:layout_gravity="left"
            android:focusable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_shop" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_edt_shop"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_type" />

        <Spinner
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_spn_type"
            android:layout_gravity="left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_base_curve" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/newlens_edt_base_curve"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_diameter" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/newlens_edt_diameter"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_lbl_sphere"
            android:text="@string/label_sphere" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_edt_sphere"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_lbl_cylinder"
            android:text="@string/label_cylinder" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_edt_cylinder"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_lbl_axis"
            android:text="@string/label_axis" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_edt_axis"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_lbl_add"
            android:text="@string/label_add" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/newlens_edt_add"
            android:layout_gravity="left" />

        </LinearLayout>
</ScrollView>
